--- a/mygoogle.css
+++ b/mygoogle.css
@@ -7,7 +7,7 @@ element.style{
 
 
 body {
-    background: #fff;
+    background: rgb(114, 103, 103);
     height: 100%;
     margin: 0;
     padding: 0;
