--- a/mygoogle.css
+++ b/mygoogle.css
@@ -1,53 +1,172 @@
-element.style{
-    display: block;
-    font-size: 14px;
-    font-family: arial,sans-serif;
-    color: #222;
-}
-
-
-body {
-    background: rgb(114, 103, 103);
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    min-width: 400px;
-    display: block;
-
-}
-#all {
-    display: flex;
-    flex-direction: column;
-    height: 100%;
-}
-
-.nav-top{
-    display: flex;
-    align-items: center;
-    padding: 6px;
-    height: 60px;
-}
-
-#logo{
-    padding-top:200px ;
-    display: center;
-    max-height: 92px;
-    position: center;
-    height: 100%;
-    margin-top: auto;
-}
-#search {
-    padding: 20px;
-    max-height: 160px;
-    display: block;
-    flex-shrink: 0;
+*{
     box-sizing: border-box;
 }
-#footer{
+
+body{
+    font-family: arial,sans-serif;
+    font-size: 14px;
+    margin: 0;
+    padding: 0;
+    background: #fff;
+    color: #222;
+    height:100%;
+    min-width: 400px;
+    display: block;
+}
+/* link colors */
+a:link {
+    background-color: transparent;
+    color: rgba(0,0,0,0.87);
+    text-decoration: none;
+    
+}
+
+a:hover, a:active {
+        background-color: transparent;
+        
+    }
+
+a {
+    display: block;
+    padding: 8px; 
+} 
+
+.top-right-nav{
+display: block;
+align-items: center;
+padding: 6px 6px 6px 6px;
+height: 60px;
+text-align: right;
+display: inline;
+position: relative;
+color: rgba(0,0,0,0.87);
+background-color: transparent;
+font-size: 14px;
+margin-top: 57px;
+margin-right: 4px;
+    
+}
+/* centering the icons and texts 
+    float:right;
+    vertical-align: middle;
+    direction:ltr;
+    
+;*/
+
+/*photo-avatar*/
+#photo-avatar{
+    border-radius: 50%;
+   
+}
+
+.content{
+    margin:auto;
+    margin-top: 200px;
+    max-width: 600px;
+    min-width: 600px;
+    max-height: 200;
+    padding: 0px 0px 0px 180px;
+    position: relative;
+}
+    
+    /*
+    display: flex;
+    -ms-flex-direction: column;
+    align-items: center;
+    flex-shrink: 0;
+    box-sizing: border-box;
+    */
+    
+    
+
+
+#google-logo{
+    max-height: 100%;
+    max-width: 100%;
+    text-align:center;
+    width: auto;
+}
+
+/*the search bar */
+.searchbar-icons{
+    width: auto;
+    max-width: 600px;
+    background: #fff;
+    display: flex;
+    border: 1px solid #dfe1e5;
+    box-shadow: none;
+    border-radius: 24px;
+    height: 44px;
+    margin: 0 auto;
+    
 
 }
 
-.footer_bottom {
+
+/*
+.searchbar{
+    
+    padding: 10px 10px 10px 10px;
+    display: flex;
+    align-items: center;
+    background-color: transparent;
+    color: rgba(0,0,0,.87);
+    border: none;
+    word-wrap: break-word;
+    outline: none;
+    display: flex;
+    flex: 100%;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+    margin-top: -40px;
+    height: 40px;
+    font-size: 16px;
+    overflow: hidden;
+    
+
+}
+*/
+
+#searchbar{
+    position:relative;
+    display:flex;
+    margin: 5px 70px 5px 35px;
+    padding-right: 80px;
+    border: none;
+    word-wrap: break-word;
+    -webkit-tap-highlight-color: transparent;
+    outline: none;
+    font-size: 16px;
+    
+}
+
+#material-icons{
+    position: absolute;
+    padding-left: 20px;
+
+   
 
 }
 
+.icon-right-container{
+    position: absolute;
+    padding-left: 10px;
+    padding-top: 10px;
+    
+}
+
+.icon-left-container{
+    position: absolute;
+    padding-left: 350px;
+    padding-top: 10px;
+
+}
+
+.bottom-searchbar{
+    margin:auto;
+    margin-top: 20px;
+    padding: 20px 20px 20px 20px;
+    position: relative;
+
+
+}
